fix: overflow issue

--- a/src/widgets/AboutUs/ui/AboutUs.module.css
+++ b/src/widgets/AboutUs/ui/AboutUs.module.css
@@ -2,6 +2,7 @@
     background-color: var(--bg-color);
     position: relative;
     color: #fff;
+    overflow: hidden;
 }
 .wrapper {
     height: 580px;
