--- a/src/widgets/OurTeam/ui/OurTeam.module.css
+++ b/src/widgets/OurTeam/ui/OurTeam.module.css
@@ -2,6 +2,7 @@
     background-color: var(--bg-color);
     position: relative;
     padding: 60px 0 140px;
+    overflow: hidden;
 }
 .title {
     color: #fff;
